--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   },
   "dependencies": {
     "pinia": "^2.1.7",
+    "primeicons": "^6.0.1",
+    "primevue": "^3.42.0",
     "vue": "^3.3.8",
     "vue-router": "^4.2.5"
   },
