--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "pinia": "^2.1.7",
     "primeicons": "^6.0.1",
     "primevue": "^3.42.0",
+    "socket.io-client": "^4.7.2",
     "vue": "^3.3.8",
     "vue-router": "^4.2.5"
   },
